# Reseau

./: .gitignore  CertifAppCompta.cer  CertifServeurCompta.cer  Evaluation1.docx  Evaluation2.docx  Evaluation3.docx  Fink_Seel_ECommerce_Phase1.docx  Fink_Seel_ECommerce_Phase2.docx  Infos keystores.txt  KSAppCompta.p12  KSServeurCompta.p12  PortUtilisés.txt  README.md  Test de conformité.docx  calculsStat.docx  client.cpp  e-commerceDossierFinal.docx  main  main.cpp  makefile  protocole.ini  serveur.cpp  ~$aluation1.docx  ~$aluation3.docx
AppletForWebApplication/: applet.cer  (+3 more)
ApplicationServeurConteneur/: CMakeLists.txt
ApplicationServeurConteneur/Application_Admin/nbproject/: build-impl.xml  genfiles.properties  project.properties
ApplicationServeurConteneur/Application_Conteneurs/: client.cpp  client.exe.stackdump  makefile  properties.txt  threadUrgence.cpp  threadUrgence.h
ApplicationServeurConteneur/CommonProtocolFunction/: commonFunction.cpp  commonFunction.h
ApplicationServeurConteneur/Librairie/: utility.h
ApplicationServeurConteneur/Librairie/exceptions/: communicationException.h  errnoException.cpp
ApplicationServeurConteneur/Librairie/fichierProp/: fichierProp.cpp  fichierProp.h
ApplicationServeurConteneur/Librairie/log/: log.h
ApplicationServeurConteneur/LibrairieCSA/: CSA.ini  sendCSAFunction.cpp  sendCSAFunction.h
ApplicationServeurConteneur/LibrairieConteneur/: protocole.ini  sendFunction.cpp  sendFunction.h
ApplicationServeurConteneur/Serveur_Conteneurs/: constante.h  login.csv  loginAdmin.csv  makefile  parc.cpp  parc.h  properties.txt  serveur.cpp  serveur.exe.stackdump
(+366 files in other folders)
